2008-01-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/DataViews/GrampletView.py:
	* src/gramps_main.py:
	* src/images/48x48/gramps-gramplet.png:
	* src/images/scalable/gramps-gramplet.svg:
	* src/images/48x48/Makefile.am:
	* src/images/scalable/Makefile.am:
	start of gramplet icon

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/DataViews/PersonView.py: removed unused import
	* src/plugins/EventCmp.py: fixed error introduced with previous change
	* src/gramps.py: removed unused import
	* src/PageView.py: removed unused import

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/plugins/EventCmp.py: clean up imports and fix pylint error
	0001496: in EventCmp.py: E:198:fix: Using variable 'l' before assignment

2008-01-07 Raphael Ackermann <raphael.ackermann@gmail.com
	* src/plugins/CmdRef.py: clean up unused and broken imports and vars
	0001494: unresolved import WebPage in CmdRef.py

2008-01-07  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/docgen/ODFDoc.py: remove duplicate import
	* src/docgen/LaTeXDoc.py :added support for opening latex editor
	0001536: not possible to select latex editor like kile to open a latex file
	automatically 

2008-01-06  Brian Matherly <brian@gramps-project.org>
	* src/Filters/_SearchFilter.py:
	0001521: Filters work when tested, but not in side bar

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/DefaultGramplets.py: added gettext (thanks, Jim!)

2008-01-06  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/MyGrampsView.py:
	* src/DataViews/__init__.py:
	* src/DataViews/GrampletView.py:
	* src/DataViews/Makefile.am:
	* src/Config/_GrampsConfigKeys.py:
	* src/plugins/DefaultGramplets.py:
	* src/plugins/Makefile.am:
	* src/plugins/DefaultGadgets.py:
	* src/glade/gramps.glade:
	* po/POTFILES.in:
	Renamed Gadgets -> Gramplets, MyGrampsView -> GrampletView

2008-01-06  Raphael Ackermann <raphael.ackermann@gmail.com>